--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
 title: Chaeyeon Cha # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Contact me by email : <a href="chaeyeon.cha@ewhain.net">chaeyeon.cha@ewhain.net</a> 
+  Contact me by email : 
+  chaeyeon.cha@ewhain.net
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
